# MaevaNGUESSAN_RolandDUTAUZIET_TP1

./: README.md  pyproject.toml  requirements.txt
data/: data.csv
notebook/: Analyse exploratoire 2 (EDA).ipynb  EDA.ipynb
src/: analyse_exploratoire.py
