[project]
name = "mosef-applied-ml"
version = "0.1.0"
description = "MoSEF-Applied-ML"
authors = [
    { name = "amedprof", email = "amedprof@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24,<2.0",
    "pandas",
    "seaborn",
    "plotly",
    "matplotlib",
    "tqdm",
    "scikit-learn",
    "jupyter (>=1.1.1,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
